# remy

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  HANDOFF.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
data/rag/: recipes_seed.json
docker/: Dockerfile.cli  llamacpp-entrypoint.sh
docs/: mcp.md  overview.md  releases.md  screenshots.md  setup.md  testing.md
scripts/: capture_ui.py
src/remy/: __init__.py  __main__.py  cli.py  config.py  logging_utils.py  metrics.py
src/remy/agents/: __init__.py  approvals_orchestrator.py  base.py  context_assembler.py  diff_validator.py  menu_planner.py  notifier.py  nutrition_estimator.py  receipt_ingestor.py  shopping_dispatcher.py
src/remy/db/: inventory.py  inventory_suggestions.py  leftovers.py  meals.py  models.py  preferences.py  receipts.py  repository.py  shopping_list.py
src/remy/devtools/: __init__.py  __main__.py  bootstrap.py  cli.py  doctor.py
src/remy/ingest/: __init__.py  receipts.py
src/remy/integrations/: __init__.py  home_assistant.py
src/remy/llm/: __init__.py  interface.py
src/remy/models/: __init__.py  context.py  plan.py  receipt.py  shopping.py
src/remy/ocr/: __init__.py  llm_client.py  parser.py  pipeline.py  sanitize.py  worker.py
src/remy/planner/: __init__.py  context_builder.py
src/remy/planner/app/: __init__.py  constraint_engine.py  planner.py  utils.py
src/remy/rag/: __init__.py  build_index.py  im2recipe.py  recipe1m.py  setup.py
src/remy/search/: __init__.py  recipes.py
src/remy/server/: __init__.py  app.py  deps.py  run.py  ui.py
src/remy/server/templates/: __init__.py  inventory.html  planner.html  preferences.html  webui.html
tests/: __init__.py  conftest.py  test_logging_utils.py  test_smoke.py
tests/agents/: test_diff_validator.py
tests/db/: test_inventory_repository.py  test_inventory_suggestions.py  test_meals_repository.py  test_preferences_repository.py  test_receipts_repository.py  test_shopping_list_repository.py
tests/devtools/: test_devtools.py
tests/e2e/: __init__.py  test_compose_plan.py
tests/fixtures/receipts/: sample_receipt.txt  sample_receipt_expected.json
tests/integration/: test_inventory_endpoint.py  test_leftovers_endpoint.py  test_meals_endpoint.py  test_metrics_endpoint.py  test_plan_endpoint.py  test_planning_context_endpoint.py  test_preferences_endpoint.py  test_receipts_endpoint.py  test_request_tracing.py  test_security.py  test_shopping_list_endpoint.py  test_ui_endpoint.py  utils.py
tests/ocr/: test_parser.py  test_pipeline.py  test_worker.py
tests/planner/: test_planner.py
tests/rag/: test_im2recipe.py  test_recipe1m.py
