[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "remy"
version = "0.1.0"
description = "Daily dinner-planning automation powered by a multi-agent architecture."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Remy Contributors" }]
dependencies = [
    "pydantic>=2.6",
    "sqlalchemy>=2.0",
    "apscheduler>=3.10",
    "typer>=0.9",
    "httpx>=0.27",
    "fastapi>=0.110",
    "python-multipart>=0.0.9",
    "pillow>=10.3",
    "pytesseract>=0.3.10",
    "pdf2image>=1.17",
    "rapidfuzz>=3.6",
    "prometheus-client>=0.19",
    "duckduckgo-search>=6.1",
    "numpy>=1.26",
    "annoy>=1.17"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.3",
    "mypy>=1.8"
]
server = [
    "uvicorn[standard]>=0.27"
]
[project.scripts]
remy = "remy.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"remy.server.templates" = ["*.html"]

[tool.coverage.run]
branch = true
source = ["src/remy"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = ["tests"]
markers = [
    "real_ocr: requires local Tesseract binary",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
disallow_any_unimported = true
namespace_packages = true
plugins = ["pydantic.mypy"]
